2003-08-18  Ben Elliston  <bje@wasabisystems.com>

	* contrib/bluegnu2.0.3: Remove unsupported subtree.

2003-08-18  Ben Elliston  <bje@wasabisystems.com>

	* MAINTAINERS: New file.

2003-08-17  Ben Elliston  <bje@wasabisystems.com>

	* doc/Makefile.am (AUTOMAKE_OPTIONS): Remove empty variable.
	* doc/Makefile.in: Regenerate.
	
2003-08-16  Ben Elliston  <bje@wasabisystems.com>

	* doc/overview.sgml (overview): Start overhauling chapter.
	
	* doc/README.Writers: New document on style conventions.
	* doc/ref.sgml: Replace "test suite" with "testsuite" throughout.
	* doc/user.sgml: Likewise.
	* doc/overview.sgml: Likewise.
	* doc/dejagnu.texi (Design Goals): Change "Deja Gnu" to "DejaGnu".

2003-08-12  Ben Elliston  <bje@wasabisystems.com>

	* Makefile.am (tarball): Update path to dejagnu.spec.
	(rpmspec): Likewise.
	(deb): Likewise, update path to package metafiles.
	(solpkg): Likewise.
	(hpdepot): Likewise.
	* Makefile.in: Regenerate.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* doc/Makefile.in: Likewise.
	* example/Makefile.in: Likewise.
	* testsuite/Makefile.in: Likewise.
	* deb: Move from here ..
	* packaging/deb: .. to here.
	* redhat: Move from here ..
	* packaging/rpm: .. to here.
	* depot: Move from here ..
	* packaging/depot: .. to here.
	* pkg: Move from here ..
	* packaging/pkg: .. to here.

	* testsuite/libdejagnu/Makefile.am (CXXFLAGS): Rename from this ..
	(AM_CXXFLAGS): .. to this, in order to suppress Automake warning.
	* testsuite/libdejagnu/Makefile.in: Regenerate.

2003-08-07  Ben Elliston  <bje@wasabisystems.com>

	* config/ddb.exp (${board}_init): Fix thinko: use Tcl incr command
	to increment count rather than count++ as in C.

2003-08-06  Ben Elliston  <bje@wasabisystems.com>

	* lib/remote.exp: Replace "TCL" with "Tcl".

2003-07-30  Ben Elliston  <bje@wasabisystems.com>

	* doc/runtest.1: Replace "TCL" with "Tcl".
	Make last revision date current.

2003-07-29  Ben Elliston  <bje@wasabisystems.com>
